# ai-roundtable

./: Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
ai_roundtable/: __init__.py  bot.py  cli.py  config.py  data.py  desc.py  io.py  log.py  mtg.py  provider.py  rule.py  skeleton.py  slice.py  yamlx.py
tests/: __init__.py  test_ai_roundtable.py  test_config.py  test_data.py  test_desc.py  test_rule.py  test_slice.py
